version/0.2/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.2.0 <https://github.com/ansys/grantami-dataflow-extensions/releases/tag/v0.2.0>`_ - June 06, 2025
====================================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Support OIDC authentication with PyGranta clients
          - `#123 <https://github.com/ansys/grantami-dataflow-extensions/pull/123>`_

        * - Allow the configuration of PyGranta and Scripting Toolkit sessions
          - `#124 <https://github.com/ansys/grantami-dataflow-extensions/pull/124>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore(deps): bump actions/download-artifact from 4.2.1 to 4.3.0 in the actions group
          - `#118 <https://github.com/ansys/grantami-dataflow-extensions/pull/118>`_

        * - chore(deps): bump ansys-openapi-common from 2.2.2 to 2.3.0 in the src-deps group
          - `#119 <https://github.com/ansys/grantami-dataflow-extensions/pull/119>`_

        * - chore(deps-dev): bump jupytext from 1.16.7 to 1.17.1 in the doc-deps group
          - `#120 <https://github.com/ansys/grantami-dataflow-extensions/pull/120>`_

        * - chore(deps-dev): bump the doc-deps group with 2 updates
          - `#121 <https://github.com/ansys/grantami-dataflow-extensions/pull/121>`_, `#125 <https://github.com/ansys/grantami-dataflow-extensions/pull/125>`_

        * - Update tornado to v6.5
          - `#122 <https://github.com/ansys/grantami-dataflow-extensions/pull/122>`_

        * - chore(deps-dev): bump the dev-deps group with 2 updates
          - `#126 <https://github.com/ansys/grantami-dataflow-extensions/pull/126>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v0.1.0
          - `#117 <https://github.com/ansys/grantami-dataflow-extensions/pull/117>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Prepare 0.2.0 release
          - `#128 <https://github.com/ansys/grantami-dataflow-extensions/pull/128>`_


`0.1.0 <https://github.com/ansys/grantami-dataflow-extensions/releases/tag/v0.1.0>`_ - April 28, 2025
=====================================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Feat: tech review
          - `#74 <https://github.com/ansys/grantami-dataflow-extensions/pull/74>`_

        * - Tech review fixes
          - `#78 <https://github.com/ansys/grantami-dataflow-extensions/pull/78>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Make mi_dataflow.py private
          - `#110 <https://github.com/ansys/grantami-dataflow-extensions/pull/110>`_

        * - Fix CI for release with actions@v9
          - `#115 <https://github.com/ansys/grantami-dataflow-extensions/pull/115>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump ansys-sphinx-theme from 1.2.2 to 1.2.6
          - `#80 <https://github.com/ansys/grantami-dataflow-extensions/pull/80>`_

        * - chore(deps-dev): bump pre-commit from 4.0.1 to 4.1.0
          - `#81 <https://github.com/ansys/grantami-dataflow-extensions/pull/81>`_

        * - chore(deps-dev): bump mypy from 1.13.0 to 1.14.1
          - `#82 <https://github.com/ansys/grantami-dataflow-extensions/pull/82>`_

        * - chore(deps-dev): bump nbsphinx from 0.9.5 to 0.9.6
          - `#83 <https://github.com/ansys/grantami-dataflow-extensions/pull/83>`_

        * - chore(deps-dev): bump jinja2 from 3.1.4 to 3.1.5
          - `#84 <https://github.com/ansys/grantami-dataflow-extensions/pull/84>`_

        * - chore(deps-dev): bump mypy from 1.14.1 to 1.15.0
          - `#88 <https://github.com/ansys/grantami-dataflow-extensions/pull/88>`_

        * - chore(deps-dev): bump jupytext from 1.16.6 to 1.16.7
          - `#89 <https://github.com/ansys/grantami-dataflow-extensions/pull/89>`_

        * - chore(deps-dev): bump sphinx-toolbox from 3.8.1 to 3.8.3
          - `#91 <https://github.com/ansys/grantami-dataflow-extensions/pull/91>`_

        * - chore(deps-dev): bump ansys-sphinx-theme from 1.2.6 to 1.3.2
          - `#92 <https://github.com/ansys/grantami-dataflow-extensions/pull/92>`_

        * - chore(deps-dev): bump sphinx-autoapi from 3.4.0 to 3.6.0
          - `#93 <https://github.com/ansys/grantami-dataflow-extensions/pull/93>`_

        * - chore(deps): bump cryptography from 44.0.0 to 44.0.1
          - `#94 <https://github.com/ansys/grantami-dataflow-extensions/pull/94>`_

        * - chore(deps-dev): bump pytest from 8.3.4 to 8.3.5
          - `#96 <https://github.com/ansys/grantami-dataflow-extensions/pull/96>`_

        * - chore(deps-dev): bump sphinx-toolbox from 3.8.3 to 3.9.0
          - `#97 <https://github.com/ansys/grantami-dataflow-extensions/pull/97>`_

        * - chore(deps-dev): bump nbsphinx from 0.9.6 to 0.9.7
          - `#98 <https://github.com/ansys/grantami-dataflow-extensions/pull/98>`_

        * - chore(deps-dev): bump ansys-sphinx-theme from 1.3.2 to 1.3.3
          - `#99 <https://github.com/ansys/grantami-dataflow-extensions/pull/99>`_

        * - chore(deps-dev): bump jinja2 from 3.1.5 to 3.1.6
          - `#101 <https://github.com/ansys/grantami-dataflow-extensions/pull/101>`_

        * - chore(deps-dev): bump pre-commit from 4.1.0 to 4.2.0
          - `#102 <https://github.com/ansys/grantami-dataflow-extensions/pull/102>`_

        * - chore(deps): bump ansys-openapi-common from 2.2.0 to 2.2.2
          - `#103 <https://github.com/ansys/grantami-dataflow-extensions/pull/103>`_

        * - chore(deps-dev): bump ansys-sphinx-theme from 1.3.3 to 1.4.2 in the doc-deps group
          - `#105 <https://github.com/ansys/grantami-dataflow-extensions/pull/105>`_

        * - chore(deps-dev): bump pytest-cov from 6.0.0 to 6.1.1 in the dev-deps group
          - `#106 <https://github.com/ansys/grantami-dataflow-extensions/pull/106>`_

        * - chore(deps): bump ansys/actions from 8 to 9 in the actions group
          - `#107 <https://github.com/ansys/grantami-dataflow-extensions/pull/107>`_

        * - chore(deps-dev): bump enum-tools from 0.12.0 to 0.13.0 in the doc-deps group
          - `#109 <https://github.com/ansys/grantami-dataflow-extensions/pull/109>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Documentation review
          - `#85 <https://github.com/ansys/grantami-dataflow-extensions/pull/85>`_

        * - Apply Vale suggestions
          - `#95 <https://github.com/ansys/grantami-dataflow-extensions/pull/95>`_

        * - Add changelog page to documentation
          - `#100 <https://github.com/ansys/grantami-dataflow-extensions/pull/100>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Fix Dependabot Configuration for Private PyPI
          - `#104 <https://github.com/ansys/grantami-dataflow-extensions/pull/104>`_

        * - Update release job to use gh-action-pypi-publish
          - `#108 <https://github.com/ansys/grantami-dataflow-extensions/pull/108>`_

        * - Prepare 0.1.0 release
          - `#116 <https://github.com/ansys/grantami-dataflow-extensions/pull/116>`_


.. vale on
