version/0.3/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.3.0 <https://github.com/ansys/grantami-dataflow-extensions/releases/tag/v0.3.0>`_ - February 20, 2026
========================================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - FIX - Add timeout to bookmark resume method
          - `#150 <https://github.com/ansys/grantami-dataflow-extensions/pull/150>`_

        * - Add support for Scripting Toolkit 5.0
          - `#198 <https://github.com/ansys/grantami-dataflow-extensions/pull/198>`_

        * - Add Python 3.14 support
          - `#199 <https://github.com/ansys/grantami-dataflow-extensions/pull/199>`_

        * - Add support for direct instance logging
          - `#200 <https://github.com/ansys/grantami-dataflow-extensions/pull/200>`_

        * - Add API log handler
          - `#203 <https://github.com/ansys/grantami-dataflow-extensions/pull/203>`_


  .. tab-item:: Miscellaneous

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Chore(deps): bump ansys/actions from 9 to 10 in the actions group
          - `#129 <https://github.com/ansys/grantami-dataflow-extensions/pull/129>`_

        * - Chore: update changelog for v0.2.0
          - `#130 <https://github.com/ansys/grantami-dataflow-extensions/pull/130>`_

        * - Add mandatory approval on release job
          - `#132 <https://github.com/ansys/grantami-dataflow-extensions/pull/132>`_

        * - Chore(deps): bump requests from 2.32.3 to 2.32.4 in the src-deps group
          - `#133 <https://github.com/ansys/grantami-dataflow-extensions/pull/133>`_

        * - Chore(deps-dev): bump the dev-deps group with 2 updates
          - `#134 <https://github.com/ansys/grantami-dataflow-extensions/pull/134>`_, `#142 <https://github.com/ansys/grantami-dataflow-extensions/pull/142>`_, `#149 <https://github.com/ansys/grantami-dataflow-extensions/pull/149>`_, `#157 <https://github.com/ansys/grantami-dataflow-extensions/pull/157>`_, `#160 <https://github.com/ansys/grantami-dataflow-extensions/pull/160>`_, `#174 <https://github.com/ansys/grantami-dataflow-extensions/pull/174>`_, `#183 <https://github.com/ansys/grantami-dataflow-extensions/pull/183>`_

        * - Chore(deps): bump urllib3 from 2.2.3 to 2.5.0
          - `#135 <https://github.com/ansys/grantami-dataflow-extensions/pull/135>`_

        * - Chore(deps-dev): bump pytest from 8.4.0 to 8.4.1 in the dev-deps group
          - `#136 <https://github.com/ansys/grantami-dataflow-extensions/pull/136>`_

        * - Update lock file
          - `#137 <https://github.com/ansys/grantami-dataflow-extensions/pull/137>`_

        * - Chore(deps-dev): bump nbsphinx from 0.9.6 to 0.9.7 in the doc-deps group
          - `#138 <https://github.com/ansys/grantami-dataflow-extensions/pull/138>`_

        * - Add missing required files
          - `#139 <https://github.com/ansys/grantami-dataflow-extensions/pull/139>`_

        * - Chore(deps-dev): bump pillow from 11.2.1 to 11.3.0
          - `#140 <https://github.com/ansys/grantami-dataflow-extensions/pull/140>`_

        * - Chore(deps-dev): bump ansys-sphinx-theme from 1.5.2 to 1.5.3 in the doc-deps group
          - `#141 <https://github.com/ansys/grantami-dataflow-extensions/pull/141>`_

        * - Update CONTRIBUTORS file
          - `#145 <https://github.com/ansys/grantami-dataflow-extensions/pull/145>`_

        * - Add vulnerability check job
          - `#146 <https://github.com/ansys/grantami-dataflow-extensions/pull/146>`_

        * - Docs: Update ``CONTRIBUTORS.md`` with the latest contributors
          - `#147 <https://github.com/ansys/grantami-dataflow-extensions/pull/147>`_, `#151 <https://github.com/ansys/grantami-dataflow-extensions/pull/151>`_

        * - Chore(deps-dev): bump ipykernel from 6.29.5 to 6.30.1 in the doc-deps group
          - `#148 <https://github.com/ansys/grantami-dataflow-extensions/pull/148>`_

        * - Chore(deps-dev): bump pre-commit from 4.2.0 to 4.3.0 in the dev-deps group
          - `#152 <https://github.com/ansys/grantami-dataflow-extensions/pull/152>`_

        * - Chore(deps): bump the actions group with 2 updates
          - `#153 <https://github.com/ansys/grantami-dataflow-extensions/pull/153>`_, `#158 <https://github.com/ansys/grantami-dataflow-extensions/pull/158>`_, `#181 <https://github.com/ansys/grantami-dataflow-extensions/pull/181>`_, `#185 <https://github.com/ansys/grantami-dataflow-extensions/pull/185>`_

        * - Chore(deps): bump requests from 2.32.4 to 2.32.5 in the src-deps group
          - `#154 <https://github.com/ansys/grantami-dataflow-extensions/pull/154>`_

        * - Chore(deps-dev): bump the doc-deps group with 2 updates
          - `#156 <https://github.com/ansys/grantami-dataflow-extensions/pull/156>`_, `#168 <https://github.com/ansys/grantami-dataflow-extensions/pull/168>`_, `#169 <https://github.com/ansys/grantami-dataflow-extensions/pull/169>`_, `#201 <https://github.com/ansys/grantami-dataflow-extensions/pull/201>`_, `#211 <https://github.com/ansys/grantami-dataflow-extensions/pull/211>`_

        * - Chore(deps-dev): bump ansys-sphinx-theme from 1.6.0 to 1.6.1 in the doc-deps group
          - `#159 <https://github.com/ansys/grantami-dataflow-extensions/pull/159>`_

        * - Pin action versions
          - `#161 <https://github.com/ansys/grantami-dataflow-extensions/pull/161>`_

        * - Chore(deps-dev): bump mypy from 1.18.1 to 1.18.2 in the dev-deps group
          - `#163 <https://github.com/ansys/grantami-dataflow-extensions/pull/163>`_

        * - Chore(deps): bump the actions group across 1 directory with 2 updates
          - `#165 <https://github.com/ansys/grantami-dataflow-extensions/pull/165>`_

        * - Chore(deps-dev): bump sphinx-autoapi from 3.6.0 to 3.6.1 in the doc-deps group
          - `#166 <https://github.com/ansys/grantami-dataflow-extensions/pull/166>`_

        * - Chore(deps): bump ansys-openapi-common from 2.3.0 to 2.3.2 in the src-deps group
          - `#167 <https://github.com/ansys/grantami-dataflow-extensions/pull/167>`_

        * - Chore(deps-dev): bump ipykernel from 7.0.1 to 7.1.0 in the doc-deps group
          - `#170 <https://github.com/ansys/grantami-dataflow-extensions/pull/170>`_

        * - Chore(deps): bump actions/download-artifact from 5.0.0 to 6.0.0 in the actions group
          - `#171 <https://github.com/ansys/grantami-dataflow-extensions/pull/171>`_

        * - Chore(deps): bump ansys/actions from 10.1.4 to 10.1.5 in the actions group
          - `#173 <https://github.com/ansys/grantami-dataflow-extensions/pull/173>`_

        * - Chore(deps): bump actions/checkout from 5.0.0 to 5.0.1 in the actions group
          - `#175 <https://github.com/ansys/grantami-dataflow-extensions/pull/175>`_

        * - Chore(deps-dev): bump pytest from 9.0.0 to 9.0.1 in the dev-deps group
          - `#176 <https://github.com/ansys/grantami-dataflow-extensions/pull/176>`_

        * - Chore(deps-dev): bump pre-commit from 4.4.0 to 4.5.0 in the dev-deps group
          - `#177 <https://github.com/ansys/grantami-dataflow-extensions/pull/177>`_

        * - Chore(deps): bump actions/checkout from 5.0.1 to 6.0.0 in the actions group
          - `#178 <https://github.com/ansys/grantami-dataflow-extensions/pull/178>`_

        * - Chore: Update missing or outdated files
          - `#179 <https://github.com/ansys/grantami-dataflow-extensions/pull/179>`_

        * - Chore(deps): bump urllib3 from 2.5.0 to 2.6.0
          - `#180 <https://github.com/ansys/grantami-dataflow-extensions/pull/180>`_

        * - Chore(deps-dev): bump the doc-deps group with 3 updates
          - `#182 <https://github.com/ansys/grantami-dataflow-extensions/pull/182>`_

        * - Chore(deps-dev): bump ansys-sphinx-theme from 1.6.3 to 1.6.4 in the doc-deps group
          - `#184 <https://github.com/ansys/grantami-dataflow-extensions/pull/184>`_

        * - Chore(deps-dev): bump mypy from 1.19.0 to 1.19.1 in the dev-deps group
          - `#186 <https://github.com/ansys/grantami-dataflow-extensions/pull/186>`_

        * - Add actions security check
          - `#187 <https://github.com/ansys/grantami-dataflow-extensions/pull/187>`_

        * - Chore(deps-dev): bump pre-commit from 4.5.0 to 4.5.1 in the dev-deps group
          - `#188 <https://github.com/ansys/grantami-dataflow-extensions/pull/188>`_

        * - Chore(deps-dev): bump filelock from 3.18.0 to 3.20.1
          - `#189 <https://github.com/ansys/grantami-dataflow-extensions/pull/189>`_

        * - Chore(deps-dev): bump sphinx-toolbox from 4.1.0 to 4.1.1 in the doc-deps group
          - `#190 <https://github.com/ansys/grantami-dataflow-extensions/pull/190>`_

        * - Update copyright year
          - `#191 <https://github.com/ansys/grantami-dataflow-extensions/pull/191>`_

        * - Chore(deps): bump urllib3 from 2.6.0 to 2.6.3
          - `#192 <https://github.com/ansys/grantami-dataflow-extensions/pull/192>`_

        * - Chore(deps-dev): bump virtualenv from 20.31.2 to 20.36.1
          - `#194 <https://github.com/ansys/grantami-dataflow-extensions/pull/194>`_

        * - Chore(deps-dev): bump filelock from 3.20.1 to 3.20.3
          - `#195 <https://github.com/ansys/grantami-dataflow-extensions/pull/195>`_

        * - Chore(deps): bump actions/checkout from 6.0.1 to 6.0.2 in the actions group
          - `#204 <https://github.com/ansys/grantami-dataflow-extensions/pull/204>`_

        * - Restore uv packages in frozen mode
          - `#205 <https://github.com/ansys/grantami-dataflow-extensions/pull/205>`_

        * - Bump nbconvert to v7.17.0
          - `#206 <https://github.com/ansys/grantami-dataflow-extensions/pull/206>`_

        * - Configure dependabot to use uv
          - `#207 <https://github.com/ansys/grantami-dataflow-extensions/pull/207>`_

        * - Chore(deps): bump ansys/actions from 10.2.3 to 10.2.4 in the actions group
          - `#208 <https://github.com/ansys/grantami-dataflow-extensions/pull/208>`_

        * - Remove dependabot private PyPI registries
          - `#209 <https://github.com/ansys/grantami-dataflow-extensions/pull/209>`_

        * - Chore(deps): bump cryptography from 46.0.3 to 46.0.5
          - `#210 <https://github.com/ansys/grantami-dataflow-extensions/pull/210>`_

        * - Chore(deps): bump pillow from 12.1.0 to 12.1.1
          - `#212 <https://github.com/ansys/grantami-dataflow-extensions/pull/212>`_

        * - Chore(deps): bump ansys/actions from 10.2.4 to 10.2.5 in the actions group
          - `#213 <https://github.com/ansys/grantami-dataflow-extensions/pull/213>`_

        * - Chore(deps-dev): bump ipykernel from 7.1.0 to 7.2.0 in the doc-deps group
          - `#214 <https://github.com/ansys/grantami-dataflow-extensions/pull/214>`_

        * - Prepare 0.3.0rc0 release
          - `#215 <https://github.com/ansys/grantami-dataflow-extensions/pull/215>`_

        * - Rename feature fragments
          - `#218 <https://github.com/ansys/grantami-dataflow-extensions/pull/218>`_

        * - Prepare 0.3.0 release
          - `#220 <https://github.com/ansys/grantami-dataflow-extensions/pull/220>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update version number
          - `#127 <https://github.com/ansys/grantami-dataflow-extensions/pull/127>`_

        * - Migrate to uv for package management and CI
          - `#202 <https://github.com/ansys/grantami-dataflow-extensions/pull/202>`_


`0.2.0 <https://github.com/ansys/grantami-dataflow-extensions/releases/tag/v0.2.0>`_ - June 06, 2025
====================================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Support OIDC authentication with PyGranta clients
          - `#123 <https://github.com/ansys/grantami-dataflow-extensions/pull/123>`_

        * - Allow the configuration of PyGranta and Scripting Toolkit sessions
          - `#124 <https://github.com/ansys/grantami-dataflow-extensions/pull/124>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore(deps): bump actions/download-artifact from 4.2.1 to 4.3.0 in the actions group
          - `#118 <https://github.com/ansys/grantami-dataflow-extensions/pull/118>`_

        * - chore(deps): bump ansys-openapi-common from 2.2.2 to 2.3.0 in the src-deps group
          - `#119 <https://github.com/ansys/grantami-dataflow-extensions/pull/119>`_

        * - chore(deps-dev): bump jupytext from 1.16.7 to 1.17.1 in the doc-deps group
          - `#120 <https://github.com/ansys/grantami-dataflow-extensions/pull/120>`_

        * - chore(deps-dev): bump the doc-deps group with 2 updates
          - `#121 <https://github.com/ansys/grantami-dataflow-extensions/pull/121>`_, `#125 <https://github.com/ansys/grantami-dataflow-extensions/pull/125>`_

        * - Update tornado to v6.5
          - `#122 <https://github.com/ansys/grantami-dataflow-extensions/pull/122>`_

        * - chore(deps-dev): bump the dev-deps group with 2 updates
          - `#126 <https://github.com/ansys/grantami-dataflow-extensions/pull/126>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v0.1.0
          - `#117 <https://github.com/ansys/grantami-dataflow-extensions/pull/117>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Prepare 0.2.0 release
          - `#128 <https://github.com/ansys/grantami-dataflow-extensions/pull/128>`_


`0.1.0 <https://github.com/ansys/grantami-dataflow-extensions/releases/tag/v0.1.0>`_ - April 28, 2025
=====================================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Feat: tech review
          - `#74 <https://github.com/ansys/grantami-dataflow-extensions/pull/74>`_

        * - Tech review fixes
          - `#78 <https://github.com/ansys/grantami-dataflow-extensions/pull/78>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Make mi_dataflow.py private
          - `#110 <https://github.com/ansys/grantami-dataflow-extensions/pull/110>`_

        * - Fix CI for release with actions@v9
          - `#115 <https://github.com/ansys/grantami-dataflow-extensions/pull/115>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump ansys-sphinx-theme from 1.2.2 to 1.2.6
          - `#80 <https://github.com/ansys/grantami-dataflow-extensions/pull/80>`_

        * - chore(deps-dev): bump pre-commit from 4.0.1 to 4.1.0
          - `#81 <https://github.com/ansys/grantami-dataflow-extensions/pull/81>`_

        * - chore(deps-dev): bump mypy from 1.13.0 to 1.14.1
          - `#82 <https://github.com/ansys/grantami-dataflow-extensions/pull/82>`_

        * - chore(deps-dev): bump nbsphinx from 0.9.5 to 0.9.6
          - `#83 <https://github.com/ansys/grantami-dataflow-extensions/pull/83>`_

        * - chore(deps-dev): bump jinja2 from 3.1.4 to 3.1.5
          - `#84 <https://github.com/ansys/grantami-dataflow-extensions/pull/84>`_

        * - chore(deps-dev): bump mypy from 1.14.1 to 1.15.0
          - `#88 <https://github.com/ansys/grantami-dataflow-extensions/pull/88>`_

        * - chore(deps-dev): bump jupytext from 1.16.6 to 1.16.7
          - `#89 <https://github.com/ansys/grantami-dataflow-extensions/pull/89>`_

        * - chore(deps-dev): bump sphinx-toolbox from 3.8.1 to 3.8.3
          - `#91 <https://github.com/ansys/grantami-dataflow-extensions/pull/91>`_

        * - chore(deps-dev): bump ansys-sphinx-theme from 1.2.6 to 1.3.2
          - `#92 <https://github.com/ansys/grantami-dataflow-extensions/pull/92>`_

        * - chore(deps-dev): bump sphinx-autoapi from 3.4.0 to 3.6.0
          - `#93 <https://github.com/ansys/grantami-dataflow-extensions/pull/93>`_

        * - chore(deps): bump cryptography from 44.0.0 to 44.0.1
          - `#94 <https://github.com/ansys/grantami-dataflow-extensions/pull/94>`_

        * - chore(deps-dev): bump pytest from 8.3.4 to 8.3.5
          - `#96 <https://github.com/ansys/grantami-dataflow-extensions/pull/96>`_

        * - chore(deps-dev): bump sphinx-toolbox from 3.8.3 to 3.9.0
          - `#97 <https://github.com/ansys/grantami-dataflow-extensions/pull/97>`_

        * - chore(deps-dev): bump nbsphinx from 0.9.6 to 0.9.7
          - `#98 <https://github.com/ansys/grantami-dataflow-extensions/pull/98>`_

        * - chore(deps-dev): bump ansys-sphinx-theme from 1.3.2 to 1.3.3
          - `#99 <https://github.com/ansys/grantami-dataflow-extensions/pull/99>`_

        * - chore(deps-dev): bump jinja2 from 3.1.5 to 3.1.6
          - `#101 <https://github.com/ansys/grantami-dataflow-extensions/pull/101>`_

        * - chore(deps-dev): bump pre-commit from 4.1.0 to 4.2.0
          - `#102 <https://github.com/ansys/grantami-dataflow-extensions/pull/102>`_

        * - chore(deps): bump ansys-openapi-common from 2.2.0 to 2.2.2
          - `#103 <https://github.com/ansys/grantami-dataflow-extensions/pull/103>`_

        * - chore(deps-dev): bump ansys-sphinx-theme from 1.3.3 to 1.4.2 in the doc-deps group
          - `#105 <https://github.com/ansys/grantami-dataflow-extensions/pull/105>`_

        * - chore(deps-dev): bump pytest-cov from 6.0.0 to 6.1.1 in the dev-deps group
          - `#106 <https://github.com/ansys/grantami-dataflow-extensions/pull/106>`_

        * - chore(deps): bump ansys/actions from 8 to 9 in the actions group
          - `#107 <https://github.com/ansys/grantami-dataflow-extensions/pull/107>`_

        * - chore(deps-dev): bump enum-tools from 0.12.0 to 0.13.0 in the doc-deps group
          - `#109 <https://github.com/ansys/grantami-dataflow-extensions/pull/109>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Documentation review
          - `#85 <https://github.com/ansys/grantami-dataflow-extensions/pull/85>`_

        * - Apply Vale suggestions
          - `#95 <https://github.com/ansys/grantami-dataflow-extensions/pull/95>`_

        * - Add changelog page to documentation
          - `#100 <https://github.com/ansys/grantami-dataflow-extensions/pull/100>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Fix Dependabot Configuration for Private PyPI
          - `#104 <https://github.com/ansys/grantami-dataflow-extensions/pull/104>`_

        * - Update release job to use gh-action-pypi-publish
          - `#108 <https://github.com/ansys/grantami-dataflow-extensions/pull/108>`_

        * - Prepare 0.1.0 release
          - `#116 <https://github.com/ansys/grantami-dataflow-extensions/pull/116>`_


.. vale on
